--- a/index.html
+++ b/index.html
@@ -40,5 +40,7 @@ function checkCookie() {
 </head>
 
 <body onload="checkCookie()"></body>
-
+<footer>
+		<p>&copy; 2023, Mirna Gaballa</p>
+	</footer>
 </html>
